# finger-detection-server

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run.py  test.py
app/: __init__.py
app/core/: HandProcessor.py  finger_detection.py
app/models/: FingerCountResponse.py  StatusResponse.py  response_models.py
app/routes/: current.py  debugImage.py  status.py  upload.py
app/utils/: image_utils.py  pydantic_compat.py
